<resources>
    <string name="app_name">SvercCommerceFinal</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="backgroundImageDessc">Background</string>
    <string name="application_name">SvercCommerce.</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account?Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="facebook_logo_desc">Facebook logo</string>
    <string name="facebook_button_text">Facebook</string>
    <string name="google_logo_desc">Google logo</string>
    <string name="google_button_text">Google</string>
    <string name="login_button_text">Login</string>
    <string name="background_start_view_desc">Background</string>
    <string name="background_circle_start_view">Background circle</string>
    <string name="texture_right_background_start_view">Texture right</string>
    <string name="start_button_text">Start</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="cancel_reset_password">Cancel</string>
    <string name="send_reset_password">Send</string>
    <string name="menu_item_title_home">Home</string>
    <string name="menu_item_title_search">Search</string>
    <string name="menu_item_title_cart">Cart</string>
    <string name="menu_item_title_profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="search_icon">Search icon</string>
    <string name="microphone_icon">Microphone icon</string>
    <string name="scan_icon">Scan icon</string>
    <string name="product_image">Product image</string>
    <string name="item_name_placeholder">Chair</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="new_price_placeholder">$1600</string>
    <string name="old_price_placeholder">$1600</string>
    <string name="best_product_image">Best product image</string>
    <string name="deal_product_placeholder">Scotch Premium</string>
    <string name="price_before_discount">$2000</string>
    <string name="discounted_price">$1600</string>
    <string name="see_product_button_text">See product</string>
    <string name="special_product_placeholder_item_name">Scotch Premium</string>
    <string name="special_product_image">special product image</string>
    <string name="special_product_price">$1600</string>
    <string name="add_to_cart_button_text">Add to cart</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best products</string>
    <string name="product_place_holder_text">Product place holder text</string>
    <string name="product_placeholder_price">€1200</string>
    <string name="product_placeholder_description">Product description</string>
    <string name="colors_list_name">Colors</string>
    <string name="sizes_list_name">Sizes</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="size_placeholder">S</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="cart_item_placeholder_quantity">1</string>
    <string name="cart_item_placeholder_size">L</string>
    <string name="cart_item_placeholder_price">€1200</string>
    <string name="cart_item_placeholder_name">Product name</string>
    <string name="total">Total</string>
    <string name="cart_total_placeholder_price">€150</string>
    <string name="my_cart">My Cart</string>
    <string name="check_out">Check out</string>
    <string name="addresses">Addresses</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="cart_placeholder_price">€50</string>
    <string name="product_name_billing_placeholder">Product Name</string>
    <string name="billing">Billing</string>
    <string name="sverccommerce_does_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">SvercCommerce does not support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="billing_placeholder_total">€150</string>
    <string name="place_order">Place Order</string>
    <string name="billing_placeholder_size">L</string>
    <string name="billing_placeholder_quantity">1</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="my_account">My account</string>
    <string name="first_name_account_settings">First Name</string>
    <string name="last_name_account_settings">Last Name</string>
    <string name="email_account_settings">Email</string>
    <string name="forgot_change_password_account_settings">Forgot/Change password</string>
    <string name="save_account_settings_button">Save</string>
    <string name="all_orders">All orders</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="order_placeholder_name">#1234567</string>
    <string name="order_placeholder_address">Address</string>
    <string name="order_fullname_placeholder">Full Name</string>
    <string name="order_phone_placeholder">Phone</string>
    <string name="order_product_list">Products</string>
    <string name="order_total_price">Total</string>
    <string name="order_address_details">Address</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="settings">Settings</string>
    <string name="profile_name">Name</string>
    <string name="all_orders_profile_view">All orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="billing_profile_view">Billing</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_view">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="orders_account_settings_view">Orders</string>
</resources>