<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/backgroundImageDessc"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="110dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/application_name"
            />

        <TextView
            android:id="@+id/tvLetsLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            android:text="@string/let_s_login"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"
            />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLogin"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register"
            android:layout_marginTop="15dp"/>
        
        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/tvDontHaveAccount"
            style="@style/editText"
            android:hint="@string/email_hint"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_marginTop="50dp"/>


        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/etEmailLogin"
            style="@style/editText"
            android:hint="@string/password_hint"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLogin"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/ivFacebookLogin"
            android:contentDescription="@string/facebook_logo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoginLogin"
            android:src="@drawable/facebook_login"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_button_text"
            app:layout_constraintStart_toStartOf="@id/ivFacebookLogin"
            app:layout_constraintTop_toTopOf="@id/ivFacebookLogin"
            app:layout_constraintBottom_toBottomOf="@id/ivFacebookLogin"
            app:layout_constraintEnd_toEndOf="@id/ivFacebookLogin"/>

        <ImageView
            android:id="@+id/ivGoogleLogin"
            android:contentDescription="@string/google_logo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin"
            android:src="@drawable/google_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_button_text"
            app:layout_constraintStart_toStartOf="@id/ivGoogleLogin"
            app:layout_constraintTop_toTopOf="@id/ivGoogleLogin"
            app:layout_constraintBottom_toBottomOf="@id/ivGoogleLogin"
            app:layout_constraintEnd_toEndOf="@id/ivGoogleLogin"/>

        
        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonLoginLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:text="@string/login_button_text"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:spinning_bar_color="@color/white"/>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>