<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tvResetPassword_start_margin"
        android:layout_marginTop="@dimen/tvResetPassword_top_margin"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="@dimen/reset_password_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <TextView
        android:id="@+id/tvResetPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/reset_password_expl_text"
        android:fontFamily="@font/poppins_light"
        android:text="@string/we_will_send_you_the_password_reset_link_to_your_email"
        android:textColor="@color/black"
        android:textSize="@dimen/reset_password_expl_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword"/>
    
    <EditText
        android:id="@+id/etResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email_hint"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:labelFor="@id/tvResetPassword"
        app:layout_constraintEnd_toEndOf="@id/tvResetPasswordText"
        app:layout_constraintStart_toStartOf="@id/tvResetPasswordText"
        app:layout_constraintTop_toBottomOf="@id/tvResetPasswordText"/>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etResetPassword"
        app:layout_constraintStart_toStartOf="@id/etResetPassword"
        app:layout_constraintTop_toBottomOf="@id/etResetPassword"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/white_background"
            android:text="@string/cancel_reset_password"
            android:textAllCaps="false"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSendResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/blue_background"
            android:text="@string/send_reset_password"
            android:textColor="@color/white"
            android:textAllCaps="false"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>